Blender crashes when pressing 'Numpad .' in Sequencer #99110

Closed
opened 2022-06-23 15:11:03 +02:00 by n1729 · 9 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: e05e1e3691
Worked: unknown

Short description of error
Pressing 'Numpad .' in Sequencer crashes Blender in a particular situation

Exact steps for others to reproduce the error

  1. Open Blender
  2. Add a new scene by 'Linked Copy'
  3. Open Sequencer (Shift F8)
  4. Press 'Numpad .' in Sequencer
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 3.2.0, branch: master, commit date: 2022-06-08 10:22, hash: `e05e1e3691` Worked: unknown **Short description of error** Pressing 'Numpad .' in Sequencer crashes Blender in a particular situation **Exact steps for others to reproduce the error** 1. Open Blender 2. Add a new scene by 'Linked Copy' 3. Open Sequencer (Shift F8) 4. Press 'Numpad .' in Sequencer
Author

Added subscriber: @n1729

Added subscriber: @n1729
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member
* thread #1, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x8)
  * frame #0: 0x0000000003ce701c blender`SEQ_channels_displayed_get(ed=0x0000000000000000) at channels.c:25:14
    frame #1: 0x00000000049e25bc blender`selected_strips_from_context(C=0x00007ffff3f84388) at sequencer_select.c:73:24
    frame #2: 0x00000000049e9f40 blender`sequencer_view_selected_exec(C=0x00007ffff3f84388, op=0x00007fffcbf84f48) at sequencer_view.c:342:27
    frame #3: 0x000000000328441c blender`wm_operator_invoke(C=0x00007ffff3f84388, ot=0x00007fffeb70d3c8, event=0x00007fffdb4b5408, properties=0x00007fffdb476468, reports=0x0000000000000000, poll_only=false, use_last_properties=true) at wm_event_system.cc:1403:16
    frame #4: 0x0000000003287136 blender`wm_handler_operator_call(C=0x00007ffff3f84388, handlers=0x00007fffcb86e580, handler_base=0x00007fffcb8ec368, event=0x00007fffdb4b5408, properties=0x00007fffdb476468, kmi_idname="SEQUENCER_OT_view_selected") at wm_event_system.cc:2427:16
    frame #5: 0x0000000003285b57 blender`wm_handlers_do_keymap_with_keymap_handler(C=0x00007ffff3f84388, event=0x00007fffdb4b5408, handlers=0x00007fffcb86e580, handler=0x00007fffcb8ec368, keymap=0x00007fffdb41d848, do_debug_handler=false) at wm_event_system.cc:2819:21
    frame #6: 0x00000000032851ec blender`wm_handlers_do_intern(C=0x00007ffff3f84388, win=0x00007fffeb7d5608, event=0x00007fffdb4b5408, handlers=0x00007fffcb86e580) at wm_event_system.cc:3145:26
    frame #7: 0x000000000327d61f blender`wm_handlers_do(C=0x00007ffff3f84388, event=0x00007fffdb4b5408, handlers=0x00007fffcb86e580) at wm_event_system.cc:3285:16
    frame #8: 0x0000000003287d7e blender`wm_event_do_region_handlers(C=0x00007ffff3f84388, event=0x00007fffdb4b5408, region=0x00007fffcb86e448) at wm_event_system.cc:3705:10
    frame #9: 0x000000000327e721 blender`wm_event_do_handlers_area_regions(C=0x00007ffff3f84388, event=0x00007fffdb4b5408, area=0x00007fffeb7f9a08) at wm_event_system.cc:3735:10
    frame #10: 0x000000000327c9c1 blender`::wm_event_do_handlers(C=0x00007ffff3f84388) at wm_event_system.cc:3932:23
    frame #11: 0x000000000326f1f7 blender`WM_main(C=0x00007ffff3f84388) at wm.c:623:5
    frame #12: 0x0000000002a90fe9 blender`main(argc=1, argv=0x00007fffffffea08) at creator.c:547:5
    frame #13: 0x00007ffff7dba290 libc.so.6`__libc_start_call_main + 128
    frame #14: 0x00007ffff7dba34a libc.so.6`__libc_start_main@@GLIBC_2.34 + 138
    frame #15: 0x0000000002a90ba5 blender`_start + 37
``` * thread #1, name = 'blender', stop reason = signal SIGSEGV: invalid address (fault address: 0x8) * frame #0: 0x0000000003ce701c blender`SEQ_channels_displayed_get(ed=0x0000000000000000) at channels.c:25:14 frame #1: 0x00000000049e25bc blender`selected_strips_from_context(C=0x00007ffff3f84388) at sequencer_select.c:73:24 frame #2: 0x00000000049e9f40 blender`sequencer_view_selected_exec(C=0x00007ffff3f84388, op=0x00007fffcbf84f48) at sequencer_view.c:342:27 frame #3: 0x000000000328441c blender`wm_operator_invoke(C=0x00007ffff3f84388, ot=0x00007fffeb70d3c8, event=0x00007fffdb4b5408, properties=0x00007fffdb476468, reports=0x0000000000000000, poll_only=false, use_last_properties=true) at wm_event_system.cc:1403:16 frame #4: 0x0000000003287136 blender`wm_handler_operator_call(C=0x00007ffff3f84388, handlers=0x00007fffcb86e580, handler_base=0x00007fffcb8ec368, event=0x00007fffdb4b5408, properties=0x00007fffdb476468, kmi_idname="SEQUENCER_OT_view_selected") at wm_event_system.cc:2427:16 frame #5: 0x0000000003285b57 blender`wm_handlers_do_keymap_with_keymap_handler(C=0x00007ffff3f84388, event=0x00007fffdb4b5408, handlers=0x00007fffcb86e580, handler=0x00007fffcb8ec368, keymap=0x00007fffdb41d848, do_debug_handler=false) at wm_event_system.cc:2819:21 frame #6: 0x00000000032851ec blender`wm_handlers_do_intern(C=0x00007ffff3f84388, win=0x00007fffeb7d5608, event=0x00007fffdb4b5408, handlers=0x00007fffcb86e580) at wm_event_system.cc:3145:26 frame #7: 0x000000000327d61f blender`wm_handlers_do(C=0x00007ffff3f84388, event=0x00007fffdb4b5408, handlers=0x00007fffcb86e580) at wm_event_system.cc:3285:16 frame #8: 0x0000000003287d7e blender`wm_event_do_region_handlers(C=0x00007ffff3f84388, event=0x00007fffdb4b5408, region=0x00007fffcb86e448) at wm_event_system.cc:3705:10 frame #9: 0x000000000327e721 blender`wm_event_do_handlers_area_regions(C=0x00007ffff3f84388, event=0x00007fffdb4b5408, area=0x00007fffeb7f9a08) at wm_event_system.cc:3735:10 frame #10: 0x000000000327c9c1 blender`::wm_event_do_handlers(C=0x00007ffff3f84388) at wm_event_system.cc:3932:23 frame #11: 0x000000000326f1f7 blender`WM_main(C=0x00007ffff3f84388) at wm.c:623:5 frame #12: 0x0000000002a90fe9 blender`main(argc=1, argv=0x00007fffffffea08) at creator.c:547:5 frame #13: 0x00007ffff7dba290 libc.so.6`__libc_start_call_main + 128 frame #14: 0x00007ffff7dba34a libc.so.6`__libc_start_main@@GLIBC_2.34 + 138 frame #15: 0x0000000002a90ba5 blender`_start + 37 ```
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Raising the priority since it's a regression (can't repro in 3.1)

Will bisect tomorrow if nobody commits the fix before that

Raising the priority since it's a regression (can't repro in 3.1) Will bisect tomorrow if nobody commits the fix before that

This issue was referenced by 2d54b0f275

This issue was referenced by 2d54b0f275dfc4060607eca10886dc8af7751824

This issue was referenced by 5c6ffd07e0

This issue was referenced by 5c6ffd07e0de8f4917927da69a68db9af205973d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-06-23 18:21:51 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99110
No description provided.