Fix T99110: Crash after running view_all operator in VSE

Crash caused by NULL dereference, when `Editing` is not initialized.

Check if data is initialized in poll function.